--- a/index.html
+++ b/index.html
@@ -11,10 +11,10 @@
 <body>
     <main class="Start-main">
         <h1 class='Page-Tittle'>GitGud</h1>
-        <h2>Take control of your games</h2>
+        <h2>Toma el control de tus juegos</h2>
         <div class="start-buttons">
             <ul>
-                <li><a href="./pages/ChooseSession.html">Play</a></li>
+                <li><a href="./pages/ChooseSession.html">Jugar</a></li>
                 <li><a href="">Tutorial</a></li>
             </ul>
         </div>
