--- a/pages/ChooseSession.html
+++ b/pages/ChooseSession.html
@@ -19,7 +19,7 @@
         </ul>
     </main>
     <footer>
-        <p>Made by <ahref="">MDev</a></p>
+        <p>Made by <a href="https://marccosdev.online">MDev</a></p>
         <div class="languages">
             <ul>
                 <li><a href="">English</a></li>
