--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
         <div class="start-buttons">
             <ul>
                 <li><a href="./pages/ChooseSession.html">Jugar</a></li>
-                <li><a href="">Tutorial</a></li>
+                <li><a href="./pages/Tutorial.html">Tutorial</a></li>
             </ul>
         </div>
     </main>
