--- a/pages/ChooseSession.html
+++ b/pages/ChooseSession.html
@@ -12,21 +12,15 @@
 </head>
 <body>
     <main class='ChooseSession-Main'>
-        <h4 class='Page-Tittle'>Choose Session</h4>
+        <h4 class='Page-Tittle'>Elegir Sesion</h4>
         <ul>
-            <li><a href="./Sesion3.html">3 Games</a> </li>
-            <li><a href="./Sesion5.html">5 Games</a> </li>
-            <li><a href="./Sesion7.html">7 Games</a> </li>
+            <li><a href="./Sesion3.html">3 Partidas</a> </li>
+            <li><a href="./Sesion5.html">5 Partidas</a> </li>
+            <li><a href="./Sesion7.html">7 Partidas</a> </li>
         </ul>
     </main>
     <footer>
         <p>Made by <a href="https://marccosdev.online">MDev</a></p>
-        <div class="languages">
-            <ul>
-                <li><a href="">English</a></li>
-                <li><a href="">Español</a></li>
-            </ul>
-        </div>
     </footer>
 </body>
 </html>
