--- a/pages/Sesion3.html
+++ b/pages/Sesion3.html
@@ -11,7 +11,7 @@
 </head>
 <body>
     <main>
-        <h3 class='Page-Tittle'>Session</h3>
+        <h3 class='Page-Tittle'>Sesion</h3>
         <div class="Session-buttons">
             <a onclick="wined()">WIN</a>
             <a onclick="lossed()">LOSS</a>
@@ -25,12 +25,6 @@
     
     <footer>
         <p>Made by <a href="https://marccosdev.online">MDev</a></p>
-        <div class="languages">
-            <ul>
-                <li><a href="">English</a></li>
-                <li><a href="">Español</a></li>
-            </ul>
-        </div>
     </footer>
     <script src="../scripts/Sesion3.js"></script>
 </body>
