--- a/pages/Sesion5.html
+++ b/pages/Sesion5.html
@@ -10,7 +10,7 @@
 </head>
 <body>
     <main>
-        <h3 class='Page-Tittle'>Session</h3>
+        <h3 class='Page-Tittle'>Sesion</h3>
         <div class="Session-buttons">
             <a onclick="wined()">WIN</a>
             <a onclick="lossed()">LOSS</a>
@@ -26,12 +26,6 @@
     
     <footer>
         <p>Made by <a href="https://marccosdev.online">MDev</a></p>
-        <div class="languages">
-            <ul>
-                <li><a href="">English</a></li>
-                <li><a href="">Español</a></li>
-            </ul>
-        </div>
     </footer>
     <script src="../scripts/Sesion5.js"></script>
     <script src="../scripts/Results.js"></script>
