--- a/pages/Aproved.html
+++ b/pages/Aproved.html
@@ -27,19 +27,13 @@
         </div>
         <div class="Action-buttons">
             <ul>
-                <li><a href="./ChooseSession.html" onclick="clearData()">Keep Playing</a></li>
-                <li><a href="../index.html" onclick="clearData()">End Session</a></li>
+                <li><a href="./ChooseSession.html" onclick="clearData()">Seguir</a></li>
+                <li><a href="../index.html" onclick="clearData()">Terminar</a></li>
             </ul>
         </div>
     </main>
     <footer>
         <p>Made by <a href="https://marccosdev.online">MDev</a></p>
-        <div class="languages">
-            <ul>
-                <li><a href="">English</a></li>
-                <li><a href="">Español</a></li>
-            </ul>
-        </div>
     </footer>
     <script src="../scripts/Results.js"></script>
 </body>
