--- a/pages/Reproved.html
+++ b/pages/Reproved.html
@@ -10,7 +10,7 @@
 </head>
 <body>
     <main class="Aproved-main">
-        <h4 class='Page-Tittle'>Reproved</h4>
+        <h4 class='Page-Tittle'>Reprobado</h4>
         <div class="win-winrate-loss">
             <ul>
                 <li>WIN</li>
@@ -34,12 +34,6 @@
     </main>
     <footer>
         <p>Made by <a href="https://marccosdev.online">MDev</a></p>
-        <div class="languages">
-            <ul>
-                <li><a href="">English</a></li>
-                <li><a href="">Español</a></li>
-            </ul>
-        </div>
     </footer>
     <script src="../scripts/Results.js"></script>
 </body>
