--- a/pages/ChooseSession.html
+++ b/pages/ChooseSession.html
@@ -13,7 +13,7 @@
 <body>
     <main class='ChooseSession-Main'>
         <h4 class='Page-Tittle'>Elegir Sesion</h4>
-        <ul>
+        <ul class="select-game">
             <li><a href="./Sesion3.html">3 Partidas</a> </li>
             <li><a href="./Sesion5.html">5 Partidas</a> </li>
             <li><a href="./Sesion7.html">7 Partidas</a> </li>
