--- a/pages/Rest.html
+++ b/pages/Rest.html
@@ -5,8 +5,8 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
-    <link rel="stylesheet" href="../style/Aproved.css">
     <link rel="stylesheet" href="../style/index.css">
+    <link rel="stylesheet" href="../style/Rest.css">
 </head>
 <body>
     <main class="Aproved-main">
@@ -26,7 +26,7 @@
             </ul>
         </div>
         <div class="Action-buttons">
-            <ul>
+            <ul class="actions">
                 <li><a href="https://youtube.com" onclick="clearData()">Youtube</a></li>
                 <li><a href="https://reddit.com" onclick="clearData()">Reddit</a></li>
                 <li><a href="../index.html" onclick="clearData()">Terminar</a></li>
