--- a/index.html
+++ b/index.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
 <html lang="es">
 <head>
+    
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -11,7 +12,7 @@
 <body>
     <main class="Start-main">
         <h1 class='Page-Tittle'>GitGud</h1>
-        <h2>Toma el control de tus juegos</h2>
+        <h2>Evita rachas de derrotas</h2>
         <div class="start-buttons">
             <ul>
                 <li><a href="./pages/ChooseSession.html">Jugar</a></li>
@@ -21,6 +22,12 @@
     </main>
     <footer>
         <p>Made by <a href="https://marccosdev.online">MDev</a></p>
+        <div class="languages">
+            <ul>
+                <li><a href="./pages/Donate.html">Donar</a></li>
+            </ul>
+        </div>
     </footer>
+    
 </body>
 </html>
