--- a/pages/ChooseSession.html
+++ b/pages/ChooseSession.html
@@ -21,6 +21,11 @@
     </main>
     <footer>
         <p>Made by <a href="https://marccosdev.online">MDev</a></p>
+        <div class="languages">
+            <ul>
+                <li><a href="./pages/Donate.html">Donar</a></li>
+            </ul>
+        </div>
     </footer>
 </body>
 </html>
