--- a/pages/Sesion5.html
+++ b/pages/Sesion5.html
@@ -26,6 +26,11 @@
     
     <footer>
         <p>Made by <a href="https://marccosdev.online">MDev</a></p>
+        <div class="languages">
+            <ul>
+                <li><a href="./pages/Donate.html">Donar</a></li>
+            </ul>
+        </div>
     </footer>
     <script src="../scripts/Sesion5.js"></script>
     <script src="../scripts/Results.js"></script>
