--- a/pages/Rest.html
+++ b/pages/Rest.html
@@ -35,6 +35,11 @@
     </main>
     <footer>
         <p>Made by <a href="https://marccosdev.online">MDev</a></p>
+        <div class="languages">
+            <ul>
+                <li><a href="./pages/Donate.html">Donar</a></li>
+            </ul>
+        </div>
     </footer>
     <script src="../scripts/Results.js"></script>
 </body>
