--- a/pages/Sesion3.html
+++ b/pages/Sesion3.html
@@ -25,6 +25,11 @@
     
     <footer>
         <p>Made by <a href="https://marccosdev.online">MDev</a></p>
+        <div class="languages">
+            <ul>
+                <li><a href="./pages/Donate.html">Donar</a></li>
+            </ul>
+        </div>
     </footer>
     <script src="../scripts/Sesion3.js"></script>
 </body>
