--- a/pages/Sesion7.html
+++ b/pages/Sesion7.html
@@ -28,6 +28,11 @@
     
     <footer>
         <p>Made by <a href="https://marccosdev.online">MDev</a></p>
+        <div class="languages">
+            <ul>
+                <li><a href="./pages/Donate.html">Donar</a></li>
+            </ul>
+        </div>
     </footer>
     <script src="../scripts/Sesion7.js"></script>
     <script src="../scripts/Results.js"></script>
