--- a/pages/Aproved.html
+++ b/pages/Aproved.html
@@ -4,9 +4,10 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>GitGud | Aprobado</title>
     <link rel="stylesheet" href="../style/index.css">
     <link rel="stylesheet" href="../style/Aproved.css">
+    <link rel="icon" href="../Icon.ico">
 </head>
 <body>
     <main class="Aproved-main">
