--- a/pages/Sesion3.html
+++ b/pages/Sesion3.html
@@ -4,7 +4,8 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>GitGud | Sesion</title>
+    <link rel="icon" href="../Icon.ico">
     <link rel="stylesheet" href="../style/Sesion.css">
     <link rel="stylesheet" href="../style/index.css">
     
