--- a/pages/Intermediate.html
+++ b/pages/Intermediate.html
@@ -29,7 +29,7 @@
         <div class="Action-buttons">
             <ul>
                 <li><a href="./ChooseSession.html" onclick="clearData()">Seguir</a></li>
-                <li><a href="" onclick="clearData()">Terminar</a></li>
+                <li><a href="../index.html" onclick="clearData()">Terminar</a></li>
             </ul>
         </div>
     </main>
