--- a/pages/ChooseSession.html
+++ b/pages/ChooseSession.html
@@ -23,7 +23,7 @@
         <p>Made by <a href="https://marccosdev.online">MDev</a></p>
         <div class="languages">
             <ul>
-                <li><a href="./pages/Donate.html">Donar</a></li>
+                <li><a href="./Donate.html">Donar</a></li>
             </ul>
         </div>
     </footer>
